[UPD] distribute self service  layout code  to partial views

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/DH.Helpdesk.SelfService.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/DH.Helpdesk.SelfService.csproj
@@ -759,6 +759,7 @@
     <Content Include="Views\Orders\DisplayTemplates\Fields\DecimalLabel.cshtml" />
     <Content Include="Views\Orders\EditorTemplates\Fields\MultiText.cshtml" />
     <Content Include="Views\Case\ExtendedCase.cshtml" />
+    <Content Include="Views\Shared\_Communication.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\dhHelpdesk_NG.Common\DH.Helpdesk.Common.csproj">
