--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Web.config
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=152368
@@ -44,7 +44,7 @@
   
   
     <add name="DSN" connectionString="Password=kgk270;Persist Security Info=True;User ID=web_user;Initial Catalog=dhHelpdesk_IKEA_BSCHR;Data Source=DHUTVSQL2;MultipleActiveResultSets=True" />	
-	  <add name="AccessManagementDB" connectionString="Data Source=dhutvsql2;Initial Catalog=AccessManagementDBDataAdminB;User ID=sa;Password=;" providerName="System.Data.SqlClient" />
+    <add name="AccessManagementDB" connectionString="Data Source=dhutvsql2;Initial Catalog=AccessManagementDBDataAdminB;User ID=sa;Password=;" providerName="System.Data.SqlClient" />
     <add name="HelpdeskSqlServerDbContext" connectionString="Password=kgk270;Persist Security Info=True;User ID=web_user;Initial Catalog=dhHelpdesk_IKEA_BSCHR;Data Source=DHUTVSQL2;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
     <add name="HelpdeskOleDbContext" connectionString="Provider=SQLOLEDB;Data Source=DHUTVSQL2;Initial Catalog=dhHelpdesk_IKEA_BSCHR;User Id=web_user;Password=kgk270;" providerName="System.Data.OleDb" />
     
@@ -91,10 +91,13 @@
     <add key="AM_Api_UserName" value="DHS" />
     <add key="AM_Api_Password" value="asd123!" />-->
 
-     <add key="AM_Api_UriPath" value="http://dhhelpdesk-ikea-bschr-am-dataadminb.datahalland.se"/>
+    <add key="AM_Api_UriPath" value="http://dhhelpdesk-ikea-bschr-am-dataadminb.datahalland.se"/>
     <add key="AM_Api_UserName" value="OperatorTest" />
     <add key="AM_Api_Password" value="asd123!" />
-  
+
+    <add key="SSO.TokenLifeTime" value="240" />
+    <add key="SSO.EnableSlidingExpiration" value="true" />
+
   </appSettings>
   
   <!--
@@ -157,10 +160,10 @@
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-			<dependentAssembly>
-				<assemblyIdentity name="System.Net.Http.Formatting" publicKeyToken="31BF3856AD364E35" culture="neutral"/>
-				<bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0"/>
-			</dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Net.Http.Formatting" publicKeyToken="31BF3856AD364E35" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0"/>
+      </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" culture="neutral"/>
         <bindingRedirect oldVersion="0.0.0.0-1.5.2.14234" newVersion="1.5.2.14234"/>
