--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/packages.config
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/packages.config
@@ -24,7 +24,9 @@
   <package id="Ninject.Web.Common.WebHost" version="3.2.2.0" targetFramework="net40" />
   <package id="Plupload" version="1.5.7.1" targetFramework="net40" />
   <package id="PostSharp" version="4.0.36" targetFramework="net45" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="1.0.0" targetFramework="net45" />
   <package id="System.IdentityModel.Tokens.ValidatingIssuerNameRegistry" version="4.5.1" targetFramework="net45" />
+  <package id="Thinktecture.IdentityModel" version="3.6.1" targetFramework="net45" />
   <package id="WebActivator" version="1.5" />
   <package id="WebActivatorEx" version="2.0.5" targetFramework="net40" />
   <package id="WebGrease" version="1.5.2" targetFramework="net40" />
