--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/DH.Helpdesk.SelfService.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/DH.Helpdesk.SelfService.csproj
@@ -229,7 +229,7 @@
       <Link>Properties\SharedAssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="App_Start\BundleConfig.cs" />
-    <Compile Include="App_Start\IdentityConfiguration.cs" />
+    <Compile Include="App_Start\FederatedAuthenticationConfiguration.cs" />
     <Compile Include="App_Start\NinjectModules\Modules\CommonModule.cs" />
     <Compile Include="App_Start\NinjectModules\Modules\EmailModule.cs" />
     <Compile Include="App_Start\NinjectModules\Modules\NotifiersModule.cs" />
@@ -279,7 +279,7 @@
     <Compile Include="Infrastructure\Common\Concrete\CommonFunctions.cs" />
     <Compile Include="Infrastructure\Common\Concrete\ErrorGenerator.cs" />
     <Compile Include="Infrastructure\Common\ICommonFunctions.cs" />
-    <Compile Include="Infrastructure\Configuration\SSOConfigurationProvider.cs" />
+    <Compile Include="Infrastructure\Configuration\FederatedAuthenticationSettings.cs" />
     <Compile Include="Infrastructure\Constants.cs" />
     <Compile Include="Infrastructure\Enums.cs" />
     <Compile Include="Infrastructure\Extensions\BooleanExtensions.cs" />
@@ -305,6 +305,7 @@
     <Compile Include="Infrastructure\Extensions\ObjectExtensions.cs" />
     <Compile Include="Infrastructure\Extensions\RequestExtension.cs" />
     <Compile Include="Infrastructure\Extensions\StringExtensions.cs" />
+    <Compile Include="Infrastructure\FederatedAuthenticationService.cs" />
     <Compile Include="Infrastructure\Filters\Notifiers\NotifierFilters.cs" />
     <Compile Include="Infrastructure\Helpers\AppConfigHelper.cs" />
     <Compile Include="Infrastructure\LocalizedAttributes\ConditionalValidationAttribute.cs" />
