--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Web.config
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Web.config
@@ -97,7 +97,9 @@
 
     <add key="SSO.TokenLifeTime" value="240" />
     <add key="SSO.EnableSlidingExpiration" value="true" />
-
+    <add key="SSO.HandleSecurityTokenExceptions" value="true" />
+    <add key="SSO.LogoutCustomerOnSessionExpire" value="true" />
+    
   </appSettings>
   
   <!--
