[FIX] #59221 SecurityToken session management. Added Max TokenLifeTime duration.

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Web.config
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Web.config
@@ -94,8 +94,9 @@
     <add key="AM_Api_UriPath" value="http://dhhelpdesk-ikea-bschr-am-dataadminb.datahalland.se"/>
     <add key="AM_Api_UserName" value="OperatorTest" />
     <add key="AM_Api_Password" value="asd123!" />
-
+    <!--  SSO Security Token settings -->
     <add key="SSO.TokenLifeTime" value="240" />
+    <add key="SSO.TokenMaxLifeTime" value="720" />
     <add key="SSO.EnableSlidingExpiration" value="true" />
     <add key="SSO.HandleSecurityTokenExceptions" value="true" />
     <add key="SSO.LogoutCustomerOnSessionExpire" value="true" />
@@ -133,9 +134,15 @@
         <add assembly="System.Web.WebPages, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
       </assemblies>
     </compilation>
+    
+    <!-- Session time out is set to 4hrs -->
+    <sessionState timeout="240" />
+    
     <!--Commented by Identity and Access VS Package-->
 
     <identity impersonate="true" />
+
+    
     <pages controlRenderingCompatibilityVersion="4.0">
       <namespaces>
         <add namespace="System.Web.Helpers"/>
@@ -146,7 +153,6 @@
         <add namespace="System.Web.WebPages"/>
       </namespaces>
     </pages>
-    <!--<identity impersonate="false" />-->
   </system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false"/>
@@ -273,4 +279,5 @@
       <wsFederation passiveRedirectEnabled="true" issuer="https://fs.dhsolutions.se/adfs/ls/" realm="https://localhost:44340/" requireHttps="false"/>
     </federationConfiguration>
   </system.identityModel.services>
+  
 </configuration>
