--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Web.config.template
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Web.config.template
@@ -69,10 +69,10 @@
     <add key="AM_Api_Password" value="asd123!"/>
     <!--  SSO Security Token settings -->
     <add key="SSO.TokenLifeTime" value="240" />
+    <add key="SSO.TokenMaxLifeTime" value="720" />
     <add key="SSO.EnableSlidingExpiration" value="true" />
     <add key="SSO.HandleSecurityTokenExceptions" value="true" />
-    <add key="SSO.LogoutCustomerOnSessionExpire" value="true" />
-        
+    <add key="SSO.LogoutCustomerOnSessionExpire" value="true" />        
   </appSettings>
   <!--
     For a description of web.config changes for .NET 4.5 see http://go.microsoft.com/fwlink/?LinkId=235367.
