[FIX] #59221 Session time out has been increased to 4hrs. [FIX] #59221 SecurityToken session management (Duration, SlidingExpiration). [FIX] #59221 SecurityToken session management. Added Max TokenLifeTime duration.

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Web.config
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Web.config
@@ -99,7 +99,7 @@
     <add key="SSO.TokenMaxLifeTime" value="720" />
     <add key="SSO.EnableSlidingExpiration" value="true" />
     <add key="SSO.HandleSecurityTokenExceptions" value="true" />
-    <add key="SSO.LogoutCustomerOnSessionExpire" value="false" />
+    <add key="SSO.LogoutCustomerOnSessionExpire" value="true" />
     
   </appSettings>
   
