[ADD] #56393 Questionnaire extra e-mail addresses

--- a/dhHelpdeskNG/dhHelpdesk_NG.Data/DH.Helpdesk.Dal.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Data/DH.Helpdesk.Dal.csproj
@@ -181,6 +181,7 @@
     <Compile Include="EntityConfigurations\ParentChildCaseRelationConfiguration.cs" />
     <Compile Include="EntityConfigurations\Questionnaire\QuestionnaireCircularCaseTypeConfiguration.cs" />
     <Compile Include="EntityConfigurations\Questionnaire\QuestionnaireCircularDepartmentConfiguration.cs" />
+    <Compile Include="EntityConfigurations\Questionnaire\QuestionnaireCircularExtraEmailConfiguration.cs" />
     <Compile Include="EntityConfigurations\Questionnaire\QuestionnaireCircularProductAreaConfiguration.cs" />
     <Compile Include="EntityConfigurations\Questionnaire\QuestionnaireCircularWorkingGroupConfiguration.cs" />
     <Compile Include="EntityConfigurations\RegistrationSourceCustomerConfiguration.cs" />
