[FIX] #59221 Session clean out on logout and saving customerId in a cookie to handle redirects on logout.

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/DH.Helpdesk.SelfService.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/DH.Helpdesk.SelfService.csproj
@@ -321,6 +321,7 @@
     <Compile Include="Infrastructure\Permission.cs" />
     <Compile Include="Infrastructure\SessionFacade.cs" />
     <Compile Include="Infrastructure\Session\PageFilters.cs" />
+    <Compile Include="Infrastructure\Helpers\WebMethodsExtensions.cs" />
     <Compile Include="Infrastructure\StringModelBinding.cs" />
     <Compile Include="Infrastructure\Tools\Concrete\DeletedFile.cs" />
     <Compile Include="Infrastructure\Tools\Concrete\DeletedItem.cs" />
