--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/packages.config
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/packages.config
@@ -9,6 +9,7 @@
   <package id="jQuery" version="1.8.3" targetFramework="net45" />
   <package id="jQuery.UI.Combined" version="1.9.2" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.9.0.1" />
+  <package id="log4net" version="2.0.5" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="4.0.20710.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.Mvc.FixedDisplayModes" version="1.0.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.Razor" version="2.0.30506.0" targetFramework="net40" />
