--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Web.config
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Web.config
@@ -31,11 +31,11 @@
     </accessManagment>
   </formLibConfigurable>
   <connectionStrings>
-    <!--<add name="HelpdeskOleDbContext" connectionString="Provider=SQLOLEDB;Data Source=dhutvsql2;Initial Catalog=DH_Support;User Id=sa;Password=;" providerName="System.Data.OleDb"/>
+    <add name="HelpdeskOleDbContext" connectionString="Provider=SQLOLEDB;Data Source=dhutvsql2;Initial Catalog=DH_Support;User Id=sa;Password=;" providerName="System.Data.OleDb"/>
     <add name="HelpdeskSqlServerDbContext" connectionString="Data Source=dhutvsql2;Initial Catalog=DH_Support;User Id=sa;Password=;MultipleActiveResultSets=True;Connection Lifetime=3;Max Pool Size=3;" providerName="System.Data.SqlClient"/>
     <add name="HelpdeskIndexingService" connectionString="Provider=MSIDXS;"/>
     <add name="DSN" connectionString="Provider=SQLOLEDB;Data Source=dhutvsql2;Initial Catalog=DH_Support;User Id=sa;Password=;" providerName="System.Data.OleDb"/>
-    <add name="DSN_AM" connectionString="Password=devtest;Persist Security Info=True;User ID=amUser;Initial Catalog=AccessManagementDBDataAdminB;Data Source=DHUTVSQL2;MultipleActiveResultSets=True" />-->
+    <add name="DSN_AM" connectionString="Password=devtest;Persist Security Info=True;User ID=amUser;Initial Catalog=AccessManagementDBDataAdminB;Data Source=DHUTVSQL2;MultipleActiveResultSets=True" />
 
     <!--<add name="DSN" connectionString="Data Source=CFPSEELM-NT2008;Initial Catalog=CFSQL0029;Persist Security Info=True;User Id=dhsschr; Password=dhbschr123;MultipleActiveResultSets=True" />
     <add name="HelpdeskSqlServerDbContext" connectionString="Data Source=CFPSEELM-NT2008;Initial Catalog=CFSQL0029;Persist Security Info=True;User Id=dhsschr; Password=dhbschr123;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
@@ -47,27 +47,13 @@
     <add name="AccessManagementDB" connectionString="Data Source=dhutvsql2;Initial Catalog=AccessManagementDBDataAdminB;User ID=sa;Password=;" providerName="System.Data.SqlClient" />
     <add name="HelpdeskSqlServerDbContext" connectionString="Password=kgk270;Persist Security Info=True;User ID=web_user;Initial Catalog=dhHelpdesk_IKEA_BSCHR;Data Source=DHUTVSQL2;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
     <add name="HelpdeskOleDbContext" connectionString="Provider=SQLOLEDB;Data Source=DHUTVSQL2;Initial Catalog=dhHelpdesk_IKEA_BSCHR;User Id=web_user;Password=kgk270;" providerName="System.Data.OleDb" />-->
-
-
-
-    <add name="HelpdeskSqlServerDbContext" connectionString="Data Source=localhost; Initial Catalog=DH_Helpdesk_JU_Test; User Id=JKP; Password=kgk270;Network Library=dbmssocn;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
-    <add name="HelpdeskOleDbContext" connectionString="Provider=SQLOLEDB; Data Source=localhost; Initial Catalog=DH_Helpdesk_JU_Test; User Id=JKP; Password=kgk270;Network Library=dbmssocn;" providerName="System.Data.OleDb" />
-    <add name="HelpdeskIndexingService" connectionString="Provider=MSIDXS;" />
-    <add name="DSN" connectionString="Password=kgk270;Persist Security Info=True;User ID=JKP;Initial Catalog=DH_Helpdesk_JU_Test;Data Source=localhost;MultipleActiveResultSets=True" />
-
-
-    <!--<add name="HelpdeskSqlServerDbContext" connectionString="Data Source=DHUTVSQL2; Initial Catalog=hd-ikeahr-dev; User Id=DH_Helpdesk; Password=;Network Library=dbmssocn;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
-    <add name="HelpdeskOleDbContext" connectionString="Provider=SQLOLEDB; Data Source=DHUTVSQL2; Initial Catalog=hd-ikeahr-dev; User Id=DH_Helpdesk; Password=;Network Library=dbmssocn;" providerName="System.Data.OleDb" />
-    <add name="HelpdeskIndexingService" connectionString="Provider=MSIDXS;" />
-    <add name="DSN" connectionString="Password=kgk270;Persist Security Info=True;User ID=web_user;Initial Catalog=hd-ikeahr-dev;Data Source=DHUTVSQL2;MultipleActiveResultSets=True" />-->
-
+    
   </connectionStrings>
   <appSettings>
-    <add key="vs:EnableBrowserLink" value="false" />
     <add key="LoginMode" value="Windows" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="dh_filesDirectory" value="C:\DHHelpdeskUTV_Documents" />
+    <add key="dh_filesDirectory" value="\\PPSEELM-NT0063.ikeadt.com\common\hr_data\cte" />
     <add key="dh_selfserviceaddress" value="http://cfmyhrservices-portal.ikeadt.com/case/" />
     <add key="dh_helpdeskaddress" value="http://cfhrsrm.ikeadt.com" />
     <add key="webpages:Version" value="2.0.0.0" />
@@ -80,8 +66,8 @@
     <add key="SmtpServer" value="smtp-gw.ikeadt.com" />
     <add key="SmtpPort" value="25" />
     <add key="DefaultUserId" value="" />
-    <!--<add key="DefaultEmployeeNumber" value="13106668" />-->
-    <add key="DefaultEmployeeNumber" value="00125091" />
+    <add key="DefaultEmployeeNumber" value="13106668" />
+
 
     <add key="CaseList" value="coworkers" />
     <add key="CurrentApplication" value="LineManager" />
