--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/DH.Helpdesk.Web.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/DH.Helpdesk.Web.csproj
@@ -316,6 +316,7 @@
     <Compile Include="Infrastructure\Helpers\AsyncHelper.cs" />
     <Compile Include="Infrastructure\Helpers\TranslateHelper.cs" />
     <Compile Include="Infrastructure\WebApi\WebApiService.cs" />
+    <Compile Include="Models\Case\InvoiceTimeModel.cs" />
     <Compile Include="Models\JsonModels\Base\BaseJsonModel.cs" />
     <Compile Include="Models\JsonModels\Case\CaseJsonModel.cs" />
     <Compile Include="Models\WebApi\TokenModel.cs" />
