--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/packages.config
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/packages.config
@@ -9,6 +9,7 @@
   <package id="DataAnnotationsExtensions.MVC" version="5.0.0.0" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
   <package id="EPPlus" version="4.0.2" targetFramework="net45" />
+  <package id="FontAwesome" version="4.7.0" targetFramework="net45" />
   <package id="iTextSharp" version="5.5.0" targetFramework="net45" />
   <package id="jQuery" version="1.8.3" targetFramework="net45" />
   <package id="jQuery.Cookie" version="1.4.0" targetFramework="net45" />
