--- a/dhHelpdeskNG/dhHelpdesk_NG.Domain/DH.Helpdesk.Domain.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Domain/DH.Helpdesk.Domain.csproj
@@ -156,9 +156,12 @@
     <Compile Include="Computers\ComputerType.cs" />
     <Compile Include="CaseSource.cs" />
     <Compile Include="CaseIsAbout.cs" />
+    <Compile Include="Computers\ComputerUserCategory.cs" />
     <Compile Include="EmailLogAttempt.cs" />
     <Compile Include="EmailSendStatus.cs" />
     <Compile Include="EntityBase.cs" />
+    <Compile Include="ExtendedCaseEntity\CaseSolution_CaseSection_ExtendedCaseForm.cs" />
+    <Compile Include="ExtendedCaseEntity\Case_CaseSection_ExtendedCase.cs" />
     <Compile Include="ExtendedCaseEntity\Case_ExtendedCaseEntity.cs" />
     <Compile Include="ExtendedCaseEntity\ExtendedCaseValue.cs" />
     <Compile Include="ExtendedCaseEntity\ExtendedCaseData.cs" />
