--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/DH.Helpdesk.Web.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/DH.Helpdesk.Web.csproj
@@ -3947,6 +3947,7 @@
     <Content Include="Views\Shared\_CaseDocumentPrint.cshtml" />
     <Content Include="Views\Cases\_CaseInformation.cshtml" />
     <Content Include="Views\Cases\_CaseValidation.cshtml" />
+    <Content Include="Areas\Inventory\Views\Workstation\RelatedInventoryFull.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Areas\Admin\Views\Web.config">
