--- a/dhHelpdeskNG/dhHelpdesk_NG.Domain/DH.Helpdesk.Domain.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Domain/DH.Helpdesk.Domain.csproj
@@ -157,6 +157,7 @@
     <Compile Include="Computers\ComputerType.cs" />
     <Compile Include="CaseSource.cs" />
     <Compile Include="CaseIsAbout.cs" />
+    <Compile Include="Condition\ConditionEntity.cs" />
     <Compile Include="EmailLogAttempt.cs" />
     <Compile Include="EmailSendStatus.cs" />
     <Compile Include="EntityBase.cs" />
