--- a/dhHelpdeskNG/dhHelpdesk_NG.Service/DH.Helpdesk.Services.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Service/DH.Helpdesk.Services.csproj
@@ -138,6 +138,12 @@
     <Compile Include="BusinessLogic\CaseDocument\CaseDocumentConditionResult.cs" />
     <Compile Include="BusinessLogic\CaseDocument\CaseDocumentReplacePropertiesResult.cs" />
     <Compile Include="BusinessLogic\Cases\CaseHelper.cs" />
+    <Compile Include="BusinessLogic\Condition\ConditionPropertyException.cs" />
+    <Compile Include="BusinessLogic\Condition\ConditionResult.cs" />
+    <Compile Include="BusinessLogic\Condition\ConditionParseException.cs" />
+    <Compile Include="BusinessLogic\Condition\ConditionBaseException.cs" />
+    <Compile Include="BusinessLogic\Condition\ConditionException.cs" />
+    <Compile Include="BusinessLogic\Condition\ConditionEvaluator.cs" />
     <Compile Include="BusinessLogic\MailTools\TemplateFormatters\MailTemplateFormatterNew.cs" />
     <Compile Include="BusinessLogic\MailTools\TemplateFormatters\OrderMailTemplateFormatter.cs" />
     <Compile Include="BusinessLogic\MailTools\TemplateFormatters\SurveyTemplate1.cs">
@@ -298,6 +304,7 @@
     <Compile Include="Infrastructure\Email\ICaseMailer.cs" />
     <Compile Include="Infrastructure\TimeZoneResolver\TimeZoneResolver.cs" />
     <Compile Include="Response\Questionnaire\OptionNote.cs" />
+    <Compile Include="Services\ConditionService.cs" />
     <Compile Include="Services\CaseExtraFollowersService.cs" />
     <Compile Include="Services\CaseFollowUpService.cs" />
     <Compile Include="Services\CaseDocumentService.cs" />
